--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+ * fixed 'all hits show' being printed at object instantiation time
+
 0.02      2011-04-13 15:21:55 America/Los_Angeles
 
   * bug fixes to image path handling
