--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+ * remove use of CGI.pm
+
 0.03      2011-04-14 13:01:54 America/Los_Angeles
 
  * fixed 'all hits show' being printed at object instantiation time
